# bop

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  backtest_data.csv  backtest_data.json  bop.hpp  bop_demo  bop_trading.db  main  main.cpp  type_safety_test
core/: algo.cpp  algo.hpp  algo_manager.hpp  auth.hpp  backtest.hpp  core.hpp  dashboard.hpp  database.cpp  database.hpp  engine.hpp  greek_engine.hpp  impl.cpp  logic.hpp  market_base.hpp  modifiers.hpp  network.hpp  order_tracker.hpp  price.hpp  pricing.hpp  shadow_engine.hpp  streaming_backend.hpp  websocket.hpp
examples/: backtest_example.cpp  universal_market_example.cpp  ws_example.cpp
exchanges/betfair/: betfair.hpp
exchanges/gnosis/: gnosis.hpp
exchanges/kalshi/: kalshi.hpp
exchanges/polymarket/: polymarket.hpp
exchanges/predictit/: predictit.hpp
markets/kalshi/: kalshi.hpp
markets/polymarket/: polymarket.hpp
tests/: test_dsl.cpp
